# marple-sdk

./: .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  README.md
.agents/skills/marple-sdk/: SKILL.md  examples.md  reference.md
marple/: README.md  pyproject.toml
marple/src/marple/: __init__.py  db.py  files.py
marple/tests/: test_SDK.py  test_db.py
matlab/: AGENTS.md  DB.m  README.md  config.json  example.m
mdb-cli/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
mdb-cli/src/: main.rs
mdb-cli/tests/: test_db_cli.rs
parquet-transcode/: Cargo.toml  README.md  analyze.py
parquet-transcode/src/: main.rs
parquet-transcode/test_data/dataset=7/signal=5/: mdb_m.speed.parquet
parquet-transcode/tests/: transcode_test.rs
public/: api.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  tutorials.html
public/_sources/: api.rst.txt  index.rst.txt  tutorials.rst.txt
public/_sources/api/: insight.rst.txt  marple.Insight.rst.txt  marple.db.DB.rst.txt  marple.db.DataStream.rst.txt  marple.db.Dataset.rst.txt  marple.db.DatasetList.rst.txt  marple.db.Signal.rst.txt  marple.files.Marple.rst.txt
public/_static/: custom.css  documentation_options.js
public/api/: db.html  files.html  insight.html  marple.Insight.html  marple.db.DB.html  marple.db.DataStream.html  marple.db.Dataset.html  marple.db.DatasetList.html  marple.db.Signal.html  marple.files.Marple.html
python/: .flake8  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  example.py  lol2.py  pyproject.toml  pytest.xml
python/docs/: DEPLOYMENT.md  api.rst  conf.py  getting-started.rst  index.rst  tutorials.rst
python/docs/_static/: custom.css
python/docs/api/: db.rst  files.rst
python/src/marple/: __init__.py  db.py  files.py  insight.py  utils.py
python/src/marple/db/: __init__.py  constants.py  dataset.py  datastream.py  db.py  signal.py  sql.py
python/tests/: conftest.py  support.py  test_db.py  test_files.py  test_insight.py  test_reliability.py  test_sdk.py  test_sql.py
rust/: AGENTS.md  Cargo.toml  README.md  RELEASING.md
rust/mdb-cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
rust/mdb-cli/src/: lib.rs  main.rs
rust/mdb-cli/tests/: integration.rs  test_db_cli.rs  unit.rs
rust/mdb-sdk/: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
rust/mdb-sdk/examples/: push_file.rs
rust/mdb-sdk/src/: client.rs  errors.rs  lib.rs  models.rs  progress.rs  upload.rs
rust/mdb-sdk/tests/: integration.rs  test_db_sdk.rs  unit.rs
rust/parquet-transcode/: AGENTS.md  LICENSE
rust/parquet-transcode/src/: main.rs
rust/parquet-transcode/test_data/dataset=1/signal=2/: mdb_m.engineRate.parquet
rust/parquet-transcode/test_data/dataset=1/signal=5/: mdb_m.speed.parquet
rust/parquet-transcode/test_data/dataset=7/signal=2/: mdb_m.engineRate.parquet
rust/parquet-transcode/tests/: transcode_test.rs
test_data/: examples_race.csv
