[build-system]
requires = ["setuptools>=61.0", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "marpledata"
version = "0.0.3"
authors = [
  { name="Matthias Baert", email="support@marpledata.com" },
]
description = "Marple SDK"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.marpledata.com/"