[package]
name = "mdb-cli"
version = "0.1.0"
authors = ["Jan Scheers <jan@marpledata.com>"]
edition = "2024"
description = "Command line client for the MarpleDB API"
documentation = "https://docs.marpledata.com/docs"
readme = "README.md"
homepage = "https://www.marpledata.com/"
repository = "https://github.com/marpledata/marple-sdk/tree/main/mdb-cli"
license = "Apache-2.0"
license-file = "LICENSE"

[[bin]]
name = "mdb"
path = "src/main.rs"


[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive", "env"] }
colored = "*"
futures-util = "*"
indicatif = { version = "*", features = ["tokio"] }
reqwest = { version = "*", features = ["json", "multipart", "stream"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "*"
tokio-util = { version = "*", features = ["io"] }
async-stream = "*"
inquire = "0.7.5"
dotenvy = "0.15.7"
