[[bin]]
name = "mdb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
colored = "3.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
serde_json = "1.0.146"
walkdir = "2.5.0"

[dependencies.clap]
features = ["derive", "env"]
version = "4.5.53"

[dependencies.indicatif]
features = ["tokio"]
version = "0.18.3"

[dependencies.reqwest]
features = ["json", "multipart", "stream"]
version = "0.12.28"

[dependencies.serde]
features = ["derive"]
version = "1.0.228"

[dependencies.tokio]
features = ["rt-multi-thread", "macros"]
version = "1"

[dependencies.tokio-util]
features = ["io"]
version = "0.7.17"

[dev-dependencies]
assert_cmd = "*"
tempfile = "*"

[package]
authors = ["Jan Scheers <jan@marpledata.com>"]
description = "Command line client for the MarpleDB API"
documentation = "https://docs.marpledata.com/docs"
edition = "2024"
homepage = "https://www.marpledata.com/"
keywords = ["marple", "cli", "database", "iceberg", "parquet"]
license = "Apache-2.0"
license-file = "LICENSE"
name = "mdb-cli"
readme = "README.md"
repository = "https://github.com/marpledata/marple-sdk/tree/main/mdb-cli"
version = "0.1.0"
