[project]
name = "marpledata"
version = "3.0.0.dev1"
description = "Marple SDK for Python"
authors = [
  { name = "Matthias Baert", email = "support@marpledata.com" },
  { name = "Jan Scheers", email = "jan@marpledata.com" },
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
]
requires-python = ">=3.11,<4.0"
dependencies = [
  "dotenv>=0.9.9",
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "pandas-stubs>=3.0.0.260204",
  "pyarrow>=22.0.0",
  "pydantic>=2.12.5",
  "requests>=2.32.5",
  "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://www.marpledata.com/"
Documentation = "https://docs.marpledata.com/docs"
Repository = "https://gitlab.com/marpledata/marple-sdk/-/tree/main/python"
Issues = "https://github.com/marpledata/marple-sdk/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/marple"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "h5py>=3.15.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
docs = [
  "autodoc-pydantic>=2.2.0",
  "pydata-sphinx-theme>=0.15.4",
  "sphinx>=7.2.6",
]
