[workspace]
resolver = "2"
members = ["mdb-sdk", "mdb-cli"]
exclude = ["parquet-transcode"]

[workspace.package]
authors = ["Jan Scheers <jan@marpledata.com>"]
edition = "2024"
homepage = "https://www.marpledata.com/"
repository = "https://github.com/marpledata/marple-sdk"

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
base64 = "0.22.1"
futures-util = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
tokio = "1.48.0"
tokio-util = { version = "0.7.17", features = ["io"] }
walkdir = "2.5.0"
