[workspace]
resolver = "2"
members = ["mdb-sdk", "mdb-cli"]
exclude = ["parquet-transcode"]

[workspace.package]
authors = ["Jan Scheers <jan@marpledata.com>"]
edition = "2024"
homepage = "https://www.marpledata.com/"
repository = "https://github.com/marpledata/marple-sdk"

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
base64 = "0.22.1"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.146", features = ["preserve_order"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false }
tokio-util = { version = "0.7.17", features = ["io"] }
tracing = { version = "0.1.43", default-features = false, features = ["attributes"] }
url = "2.5.7"
walkdir = "2.5.0"
