[[bin]]
name = "mdb"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
colored = "3.0.0"
dotenvy = "0.15.7"
futures-util = { workspace = true, default-features = false, features = ["std"] }
marple-db = { path = "../mdb-sdk", version = "0.1.0", features = ["azure-sdk-commit"] }
reqwest.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[dependencies.clap]
features = ["derive", "env"]
version = "4.5.53"

[dependencies.indicatif]
features = ["tokio"]
version = "0.18.3"

[dependencies.tokio]
features = ["rt-multi-thread", "macros", "fs", "io-util"]
workspace = true

[dev-dependencies]
tempfile = "3.23.0"
parquet = "57.1.0"
assert_cmd = "2.1.1"

[package]
authors.workspace = true
description = "Command line client for the MarpleDB API"
documentation = "https://docs.marpledata.com/docs"
edition.workspace = true
homepage.workspace = true
keywords = ["marple", "cli", "database", "iceberg", "parquet"]
categories = [
    "command-line-utilities",
    "database",
    "parser-implementations",
    "filesystem",
    "aerospace",
]
license = "Apache-2.0"
name = "mdb-cli"
readme = "README.md"
repository.workspace = true
version = "0.2.0"
exclude = ["target/", ".git/", ".gitignore"]
